--- a/home.css
+++ b/home.css
@@ -9,21 +9,25 @@
     padding: 0;
     -webkit-text-size-adjust: none;
 }
-
+.dogs{
+    border:1px solid red;
+    width: 100%;
+    height: 100%;
+    background-color: rgb(226, 226, 226);
+}
 img{
     display: block;
 }
-html,body{
+html{
     width: 100%;
     height: 100%;
-    -webkit-overflow-scrolling: touch;
+}
+body{
+    height: 100%;
+    width: 100%;
     scroll-behavior: smooth;
 }
-.dogs{
-    width: 100%;
-    height: auto;
-    background-color: rgb(226, 226, 226);
-}
+
 .header{
     position: sticky;
     top: 0;
@@ -46,18 +50,18 @@ html,body{
     padding: 0 0 0 50px ;
 }
 .videopage{
-    height: auto;
+    height: 100%;
     width:100%;
-    background-color: rgb(226,226,226);
+    background-color: rgb(192, 186, 186);
 }
 .video{
     height: 500px;
-    width: 700px;
+    width: 100%;
     padding: 100px 0 0 30px;
     margin: 0 auto;
 }
 .intor{
-    width: 780px;
+    width: fit-content;
     height: 210px;
     text-align: center;
     font-family: Microsoft JhengHei;
@@ -72,13 +76,11 @@ html,body{
     background-color: #f5f1ee;
     font-size: 36px;
     position: relative;
-    margin-top: 20px;
 }
 .food-title{
-    height:auto ;
+    height:200px ;
     width: 100%;
     position: relative;
-    margin-top: 30px;
     top: 20px;
 }
 .icon1{
@@ -138,7 +140,6 @@ html,body{
     margin-top: 80px;
     position: relative;
     top: 30px;
-    left: 250px;
 }
 .fresh{
     height: 300px;
@@ -151,7 +152,6 @@ html,body{
     margin-top: 80px;
     position: relative;
     top: 30px;
-    left: 250px;
 }
 .food{
     height: 300px;
@@ -164,7 +164,6 @@ html,body{
     margin-top: 80px;
     position: relative;
     top: 30px;
-    left: 250px;
 }
 .snack{
     height: 300px;
@@ -177,7 +176,6 @@ html,body{
     margin-top: 80px;
     position: relative;
     top: 30px;
-    left: 250px;
 }
 .word1{
     text-align: center;
