--- a/home.css
+++ b/home.css
@@ -332,7 +332,7 @@ body{
     font-weight: bold;
     font-family: Microsoft JhengHei;
     padding-top: 35px;
-    padding-left: 35spx;
+    padding-left: 35px;
 }
 .photo5{
     position: relative;
@@ -360,14 +360,16 @@ body{
     font-size: 24px;
     position: relative;
     top: 50px;
-    left: 100px;
+    padding-left: 100px;
+    font-family: sans-serif;
 }
 .part2{
     height: fit-content;
     font-size: 24px;
     position: relative;
     top: -320px;
-    left: 770px;
+    padding-left: 770px;
+    font-family: sans-serif;
 }
 .article2{
     height: fit-content;
