--- a/home.css
+++ b/home.css
@@ -360,7 +360,7 @@ body{
     font-size: 24px;
     position: relative;
     top: 50px;
-    padding-left: 100px;
+    left: 100px;
     font-family: sans-serif;
 }
 .part2{
@@ -368,7 +368,7 @@ body{
     font-size: 24px;
     position: relative;
     top: -320px;
-    padding-left: 770px;
+    left: 770px;
     font-family: sans-serif;
 }
 .article2{
