--- a/home.css
+++ b/home.css
@@ -1,6 +1,6 @@
 @import url("reset.css");
 @font-face{
-    font-family:"jp";
+    font-family: jp ;
     src: url(/jf-openhuninn-1.1.tff);
 }
 *{
@@ -8,12 +8,6 @@
     margin: 0;
     padding: 0;
     -webkit-text-size-adjust: none;
-}
-.dogs{
-    border:1px solid red;
-    width: 100%;
-    height: 100%;
-    background-color: rgb(226, 226, 226);
 }
 img{
     display: block;
@@ -27,7 +21,6 @@ body{
     width: 100%;
     scroll-behavior: smooth;
 }
-
 .header{
     position: sticky;
     top: 0;
@@ -35,413 +28,42 @@ body{
     width: auto;
     height: auto;
     margin: 0 auto;
-    background-color: rgb(226, 226, 226);
-}
-.home{
-    height: 100%;
-    width: 100%;
-    background-color: rgba(212, 212, 212, 0.055);
-}
-.name{
-    height: 421px;
-    width: 65px;
-    font-size: 50px;
-    font-family: jp; 
-    padding: 0 0 0 50px ;
+    background-color: #f5f1ee;
 }
 .videopage{
     height: 100%;
     width:100%;
-    background-color: rgb(102, 65, 65);
+    background-color: #f5f1ee;
 }
 .video{
     height: 400px;
     width: 100%;
-    margin-top: 100px;
-    padding-left:600px; ;
-    position: absolute;
+    top: 100px;
+    position: relative;
+    top: 250px;
+    padding-left: 200px;
 }
 .intor{
-    width: fit-content;
-    height: 210px;
+    width: 420px;
+    height: 310px;
     text-align: center;
-    font-family: Microsoft JhengHei;
-    font-size: 16px;
+    font-family: jp;
+    font-size: 24px;
+    font-weight: bold;
     background-color: rgb(157, 204, 248);
-    border-radius: 5%;
+    border-radius: 20px;;
     position: relative;
-    top: 500px;
-    left: 570px;
-}
-.KW{
-    height: 100%;
-    width: 100%;
-    background:#f5f1ee ;
-    font-size: 36px;
-    position: relative;
-}
-.food-title{
-    height:200px ;
-    width: 100%;
-    position: relative;
-}
-.icon1{
-    position: absolute;
-    top: 50px;
-    left: 38px;
-    color: #f8cca0;
-    z-index: 3;
-}
-
-.circle{
-    position: relative;
-    height:200px ;
-    width: 200px;
-}
-.circleTest{
-    position: relative;
-    height:200px ;
-    width: 200px;
-    border-radius: 100px;
-    background-color: #534741;
-    z-index: 2;
-}
-.ret{
-    width: 350px;
-    height: 165px;
-    border-radius: 75px;
-    background-color: #f8cca0;
-    position: absolute;
-    top: 20px;
-    left: 90px;
-    z-index: 1;
-}
-.fword{
-    text-align: center;
-    margin-top: 40px;
-    margin-left: 40px;
-    font-size: 60px ;
-    font-weight: bold;
-    font-family: Microsoft JhengHei;
-}
-.KW1{
-    height: 100%;
-    width: 100% ;
-    background:#f5f1ee ;
-    position: relative;
-}
-.meat{
-    height: 300px;
-    width: 260px;
-    border-radius: 30%;
-    border: 5px solid;
-    border-color: #afafaf;
     float: left;
-    margin-left: 80px;
-    margin-top: 80px;
-    position: relative;
-    top: 30px;
-    left:50px;
-}
-.fresh{
-    height: 300px;
-    width: 260px;
-    border-radius: 30%;
-    border: 5px solid;
-    border-color: #afafaf;
-    float: left;
-    margin-left: 80px;
-    margin-top: 80px;
-    position: relative;
-    top: 30px;
-    left: 50px;
-}
-.food{
-    height: 300px;
-    width: 260px;
-    border-radius: 30%;
-    border: 5px solid;
-    border-color: #afafaf;
-    float: left;
-    margin-left: 80px;
-    margin-top: 80px;
-    position: relative;
-    top: 30px;
-    left: 50px;
-}
-.snack{
-    height: 300px;
-    width: 260px;
-    border-radius: 30%;
-    border: 5px solid;
-    border-color: #afafaf;
-    float: left;
-    margin-left: 80px;
-    margin-top: 80px;
-    position: relative;
-    top: 30px;
-    left: 50px;
-}
-.word1{
-    text-align: center;
-    font-size: 22px;
-    color: royalblue;
-    font-family: monospace;
-    position: absolute;
-    bottom: 40px;
-    left: 40px;
-}
-.word2{
-    text-align: center;
-    font-size: 22px;
-    color: royalblue;
-    font-family: monospace;
-    position: absolute;
-    bottom: 40px;
-    left: 40px;
-}
-.word3{
-    text-align: center;
-    font-size: 22px;
-    color: royalblue;
-    font-family: monospace;
-    position: absolute;
-    bottom: 40px;
-    left: 40px;
-}
-.word4{
-    text-align: center;
-    font-size: 22px;
-    color: royalblue;
-    font-family: monospace;
-    position: absolute;
-    bottom: 40px;
-    left: 40px;
-}
-.circle1{
-    height: 262px;
-    width: 262px;
-    border-radius: 130px;
-    border: 8px solid;
-    border-color: #c3ae95;
-    position: absolute;
-    top: -105px;
-    left: -5px;
-}
-.photo1{
-    position: relative;
-    left: -5px;
-    top: -3px;
-}
-.circle2{
-    height: 262px;
-    width: 262px;
-    border-radius: 130px;
-    border: 8px solid;
-    border-color: #c3ae95;
-    position: absolute;
-    top: -105px;
-    left: -5px;
-}
-.photo2{
-    position: relative;
-    left: -2px;
-    top: -2px;
-}
-.circle3{
-    height: 262px;
-    width: 262px;
-    border-radius: 130px;
-    border: 8px solid;
-    border-color: #c3ae95;
-    position: absolute;
-    top: -105px;
-    left: -5px;
-}
-.photo3{
-    position: relative;
-    left: -2px;
-    top: -3px;
-}
-.circle4{
-    height: 262px;
-    width: 262px;
-    border-radius: 130px;
-    border: 8px solid;
-    border-color: #c3ae95;
-    position: absolute;
-    top: -105px;
-    left: -5px;
-}
-.photo4{
-    position: relative;
-    left: -2px;
-    top: -3px;
-}
-.dia{
-    height: 300px;
-    width: 1300px;
-    border: 3px solid violet;
-    position: absolute;
-    left: 15px;
-    top: 500px;
-}
-.KW2{
-    height: auto;
-    width: 100%;
-    background-color: #f5f1ee;
-    position: relative;
-}
-.money-title{
-    height: 280px;;
-    width: 800px;
-    position: relative;
-}
-.Q{
-    height: 260px;
-    width: 240px;
-    border: 30px solid #c7b299;
-    border-radius: 180px;
-    position: relative;
-    z-index: 3;
-}
-.line{
-    height: 100px;
-    width: 0;
-    border: 18px solid #c7b299;
-    border-radius: 10px;
-    transform: rotate(-50deg);
-    position: relative;
-    left: 135px;
-    top: -70px;
-    z-index: 1;
-}
-.ret2{
-    height: 150px;
-    width: 650px;
-    background-color: #d8cabc;
-    border-radius: 90px;
-    position: relative ;
-    top: -180px;
-    left: 120px;
-    z-index: 0;
-}
-.mword{
-    font-size: 60px;
-    text-align: center;
-    font-weight: bold;
-    font-family: Microsoft JhengHei;
-    padding-top: 35px;
-    padding-left: 35px;
-}
-.photo5{
-    position: relative;
-    left: -15px;
-    top: -5px;
-    z-index: 2;
-}
-.article1{
-    height: fit-content;
-    width: 100%;
-    position: absolute;
-    top: 350px;
-}
-.article1>h1{
-    font-size: 36px;
-    font-weight: bold;
-    font-family: sans-serif;
-}
-.article1 >h2,h3,p{
-    font-size: 26px;
-    font-family: sans-serif;
-}
-.part1{
-    height: fit-content;
-    font-size: 24px;
-    position: relative;
-    top: 50px;
-    left: 100px;
-    font-family: sans-serif;
-}
-.part2{
-    height: fit-content;
-    font-size: 24px;
-    position: relative;
-    top: -320px;
-    left: 770px;
-    font-family: sans-serif;
-}
-.article2{
-    height: fit-content;
-    width: 100%;
-    position: absolute;
-    top: 1290px;
-}
-.article2 >h2,h3,h4{
-    font-size: 26px;
-    font-family: sans-serif;
-}
-.article3{
-    height: fit-content;
-    width: 100%;
-    position: absolute;
-    top: 2100px;
-}
-.article3 >h2,h3,h4{
-    font-size: 26px;
-    font-family: sans-serif;
-}
-.article4{
-    height: fit-content;
-    width: 100%;
-    position: absolute;
-    top: 2700px;
-}
-.article4 >h2,h3,h4{
-    font-size: 26px;
-    font-family: sans-serif;
-}
-.article5{
-    height: fit-content;
-    width: 100%;
-    position: absolute;
-    top: 3300px;
-}
-.article5 >h2,h3{
-    font-size: 26px;
-    font-family: sans-serif;
-}
-.article6{
-    height: fit-content;
-    width: 100%;
-    position: absolute;
-    top: 4200px;
-}
-.article6 >h2,h3{
-    font-size: 26px;
-    font-family: sans-serif;
-}
-.top{
-    float: left;
-    z-index: 7;
-    position: fixed;
-    left: 50px;
-}
-.People{
-    height: 100px;
-    width: 100%;
-    background-color: rgb(226, 226, 226);
-    position: relative;
-    top: 5800px;
-    border: 1px solid red;
+    margin-left: 1250px;
+    margin-top: -40px;
 }
 nav{
     height: fit-content;
-    width: 100%;
     position: fixed;
-    background-color: rgb(247, 226, 226);
+    background-color: #c3ae95;
     opacity: 95%;
     z-index: 5;
+    width: 100%;
 }
 .menu-btn{
     font-size: 36px;
@@ -508,6 +130,12 @@ nav{
     background: transparent;
     border: 2px solid;
     outline: none;
+}
+.top{
+    float: left;
+    z-index: 7;
+    position: fixed;
+    left: 40px;
 }
 table{
     border:2px solid black ;
