--- a/home.css
+++ b/home.css
@@ -59,6 +59,7 @@ body{
     border-radius: 20px;
     position: relative;
     margin-left: 70px;
+    margin-right: 30px;
 }
 nav{
     height: fit-content;
