--- a/css/money.css
+++ b/css/money.css
@@ -28,6 +28,7 @@ body{
     width: 100%;
     background-color: #f5f1ee;
     position: relative;
+    top: 70px;
 }
 .money-title{
     height: 280px;
