--- a/css/money.css
+++ b/css/money.css
@@ -85,6 +85,7 @@ body{
     position: relative;
     background-color: #f5f1ee;
     padding-left: 40px ;
+    top: 20px;
 }
 .article1>h1{
     font-size: 36px;
@@ -132,7 +133,7 @@ body{
     height: 680px;
     width: 100%;
     position: absolute;
-    top: 1270px;
+    top: 1000px;
     background-color: #f5f1ee;
     padding-left: 40px ;
 }
@@ -149,7 +150,7 @@ body{
     height: 530px;
     width: 100%;
     position: absolute;
-    top: 1950px;
+    top: 1650px;
     background-color: #f5f1ee;
     padding-left: 40px ;
 }
@@ -166,7 +167,7 @@ body{
     height: 570px;
     width: 100%;
     position: absolute;
-    top: 2500px;
+    top: 2200px;
     background-color: #f5f1ee;
     padding-left: 40px ;
 }
@@ -183,7 +184,7 @@ body{
     height: 860px;
     width: 100%;
     position: absolute;
-    top: 3060px;
+    top: 2760px;
     background-color: #f5f1ee;
     padding-left: 40px ;
 }
@@ -200,7 +201,7 @@ body{
     height: 400px;
     width: 100%;
     position: absolute;
-    top: 3930px;
+    top: 3730px;
     background-color: #f5f1ee;
     padding-left: 40px ;
 }
@@ -218,6 +219,13 @@ body{
     z-index: 7;
     position: fixed;
     left: 50px;
+}
+.sheet2{
+    font-family: jp;
+    font-size: 34px;
+    position: relative;
+    top: 40px;
+    left: 30vw;
 }
 table{
     border:2px solid black ;
