--- a/css/snack.css
+++ b/css/snack.css
@@ -18,23 +18,25 @@ html{
     height: 100%;
 }
 body{
-    height: 100%;
+    height: 100vh;
     width: 100%;
     scroll-behavior: smooth;
     background-color: #f5f1ee;
 }
 .content{
-    height: 1000px;
-    width: 1600px;
+    height: 60vh;
+    width: 70vw;
     margin-left: 50px;
 }
 .article{
-    height: 80vh;
-    width: 50vw;
+    height: 100%;
+    display: flex;
+    width: 70vw;
     position: absolute;
     background-color: #f5f1ee;
     font-family: jp;
     top: 50px;
+    left: 10vw;
 }
 .article>h1{
     font-size: 36px;
@@ -45,6 +47,8 @@ body{
 .part1{
     position: relative;
     margin-top: 50px;
+    height: 10vh;
+    width: 30vw;
 }
 .part2{
     position: relative;
@@ -79,6 +83,10 @@ body{
     position: relative;
     margin-top: 50px;
 }
+.part8{
+    position: relative;
+    margin-top: 50px;
+}
 .button{
     position: absolute;
     height: 80px;
@@ -90,7 +98,7 @@ body{
     font-family: jp;
     font-weight: bold;
     background-color: rosybrown;
-    margin-left: 70vw;
+    margin-left: 60vw;
     margin-top: 50px;
 }
 .button:hover{
