--- a/css/fresh.css
+++ b/css/fresh.css
@@ -18,22 +18,25 @@ html{
     height: 100%;
 }
 body{
-    height: 100%;
+    height: 100vh;
     width: 100%;
     scroll-behavior: smooth;
     background-color: #f5f1ee;
 }
 .content{
-    height: 1000px;
-    width: 1600px;
+    height: 60vh;
+    width: 70vw;
     margin-left: 50px;
 }
 .article{
-    height: 1200px;
-    width: 100%;
+    height: 100%;
+    display: flex;
+    width: 70vw;
     position: absolute;
     background-color: #f5f1ee;
     font-family: jp;
+    top: 50px;
+    left: 10vw;
 }
 .article>h1{
     font-size: 36px;
@@ -81,7 +84,8 @@ body{
     font-family: jp;
     font-weight: bold;
     background-color: rosybrown;
-    margin-left: 1600px;
+    margin-left: 60vw;
+    margin-top: 50px;
 }
 .button:hover{
     transform: scale(1.1);
