--- a/css/mind/mind.css
+++ b/css/mind/mind.css
@@ -8,7 +8,7 @@
     margin: 0;
     padding: 0;
     -webkit-text-size-adjust: none;
-    /*border: 1px solid red;*/
+    border: 1px solid red;*/
 }
 img{
     display: block;
@@ -30,7 +30,7 @@ body{
     left: 50px;
 }
 .KW{
-    position: relative;
+    position: absolute;
     display: flex;
     height: 100%;
     width: 100%;
@@ -42,9 +42,9 @@ body{
     flex: auto;
     top: 30vh;
     height: 45vh;
-    width: 40vw;
+    width: 50vw;
     margin-top: 10vh;
-    margin-left: -20vw;
+    margin-left: -25vw;
     margin-right: 20px;
 }
 .med-title{
@@ -110,7 +110,7 @@ body{
     border: 5px solid;
     border-color: #afafaf;
     float: left;
-    margin-left: 80px;
+    margin-left: 50px;
     margin-top: 80px;
     position: relative;
     top: 30px;
@@ -122,7 +122,7 @@ body{
     border: 5px solid;
     border-color: #afafaf;
     float: left;
-    margin-left: 80px;
+    margin-left: 50px;
     margin-top: 80px;
     position: relative;
     top: 30px;
@@ -134,7 +134,7 @@ body{
     border: 5px solid;
     border-color: #afafaf;
     float: left;
-    margin-left: 80px;
+    margin-left: 50px;
     margin-top: 80px;
     position: relative;
     top: 30px;
@@ -146,7 +146,7 @@ body{
     border: 5px solid;
     border-color: #afafaf;
     float: left;
-    margin-left: 80px;
+    margin-left: 50px;
     margin-top: 80px;
     position: relative;
     top: 30px;
@@ -157,8 +157,8 @@ body{
     color: royalblue;
     font-family: jp;
     position: absolute;
-    bottom: 40px;
-    left: 40px;
+    bottom: 45px;
+    left: 30px;
 }
 .word2{
     text-align: center;
