--- a/css/mind/mind.css
+++ b/css/mind/mind.css
@@ -37,15 +37,27 @@ body{
     background:#f5f1ee ;
     font-size: 36px;
 }
-.box1{
+.KW1{
     position: relative;
     flex: auto;
     top: 30vh;
-    height: 45vh;
+    height: 90vh;
     width: 50vw;
     margin-top: 10vh;
-    margin-left: -27vw;
-    margin-right: 20px;
+    left: -20vw;
+}
+.box1{
+    position: relative;
+    flex: auto;
+    height: 45vh;
+    width: 60vw;
+}
+.box2{
+    position: relative;
+    flex: auto;
+    height: 45vh;
+    width: 50vw;
+    margin-left: 10vw;
 }
 .med-title{
     height:200px ;
