--- a/css/mind/mind.css
+++ b/css/mind/mind.css
@@ -8,7 +8,7 @@
     margin: 0;
     padding: 0;
     -webkit-text-size-adjust: none;
-    /*border: 1px solid red;*/
+    border: 1px solid red;*/
 }
 img{
     display: block;
@@ -42,7 +42,7 @@ body{
     flex: auto;
     top: 30vh;
     height: 90vh;
-    width: 50vw;
+    width: 70vw;
     margin-top: 10vh;
     left: -20vw;
 }
@@ -56,7 +56,7 @@ body{
     position: relative;
     flex: auto;
     height: 45vh;
-    width: 50vw;
+    width: 40vw;
     margin-left: 10vw;
 }
 .med-title{
@@ -77,7 +77,7 @@ body{
     position: absolute;
     top: 60px;
     left: 65px;
-    color: #f8427f;
+    color: #f5baba;
     z-index:3 ;
 }
 .circle{
@@ -153,7 +153,6 @@ body{
     border: 5px solid;
     border-color: #afafaf;
     float: left;
-    margin-left: 50px;
     margin-top: 80px;
     position: relative;
     top: 30px;
