--- a/css/mind/mind.css
+++ b/css/mind/mind.css
@@ -44,7 +44,7 @@ body{
     height: 90vh;
     width: 70vw;
     margin-top: 10vh;
-    left: -20vw;
+    left: -30vw;
 }
 .box1{
     position: relative;
@@ -118,6 +118,7 @@ body{
     border: 5px solid;
     border-color: #afafaf;
     float: left;
+    margin-left: 30px;
     margin-top: 80px;
     position: relative;
     top: 30px;
@@ -153,6 +154,7 @@ body{
     border: 5px solid;
     border-color: #afafaf;
     float: left;
+    margin-left: 30px;
     margin-top: 80px;
     position: relative;
     top: 30px;
