--- a/css/mind/mind.css
+++ b/css/mind/mind.css
@@ -8,7 +8,7 @@
     margin: 0;
     padding: 0;
     -webkit-text-size-adjust: none;
-    border: 1px solid red;*/
+    /*border: 1px solid red;*/
 }
 img{
     display: block;
@@ -313,7 +313,7 @@ body{
 }
 
 nav{
-    height: fit-content;
+    height: 55px;
     position: fixed;
     background-color: #c3ae95;
     opacity: 95%;
