--- a/css/money.css
+++ b/css/money.css
@@ -265,7 +265,7 @@ td:hover {
     border: 1px solid red;
 }
 nav{
-    height: fit-content;
+    height: 55px;
     position: fixed;
     background-color: #c3ae95;
     opacity: 95%;
