--- a/home.css
+++ b/home.css
@@ -62,7 +62,7 @@ body{
     margin-right: 30px;
 }
 nav{
-    height: fit-content;
+    height: 55px;
     position: fixed;
     background-color: #c3ae95;
     opacity: 95%;
