--- a/css/med/med1.css
+++ b/css/med/med1.css
@@ -8,7 +8,7 @@
     margin: 0;
     padding: 0;
     -webkit-text-size-adjust: none;
-    /*border: 1px solid red;*/
+    border: 1px solid red;*/
 }
 img{
     display: block;
@@ -55,7 +55,7 @@ body{
     font-weight: bold;
     background-color: rosybrown;
     margin-left: 65vw;
-    margin-top:25vh;
+    margin-top:20vh;
 }
 .button:hover{
     transform: scale(1.1);
