--- a/css/money.css
+++ b/css/money.css
@@ -8,7 +8,7 @@
     margin: 0;
     padding: 0;
     -webkit-text-size-adjust: none;
-    /*border: 1px solid red;*/  
+    border: 1px solid red;*/  
 }
 img{
     display: block;
@@ -26,10 +26,10 @@ body{
 .KW2{
     display: flex;
     height: auto;
-    width: 100%;
+    width: 70vw;
     background-color: #f5f1ee;
-    position: relative;
-    top: 70px;
+    position: absolute;
+    left: 5vw;
 }
 .money-title{
     height: 30vh;
@@ -102,17 +102,17 @@ body{
 .box11{
     position: relative;
     height: 25vh;
-    width: 80vw;
+    width: 70vw;
 }
 .sheet{
     height: 50vh;
-    width: 90vw;
+    width: 70vw;
     position: absolute;
     display: flex;
 }
 .part1{
     height: 50vh;
-    width: 30vw;
+    width: 20vw;
     font-size: 24px;
     font-weight: bold;
     position: relative;
@@ -120,7 +120,7 @@ body{
 }
 .part2{
     height: 50vh;
-    width: 25vw;
+    width: 20vw;
     font-size: 24px;
     font-weight: bold;
     position: relative;
@@ -130,7 +130,7 @@ body{
 }
 .part3{
     height: 50vh;
-    width: 25vw;
+    width: 20vw;
     font-size: 24px;
     font-weight: bold;
     position: relative;
@@ -139,12 +139,12 @@ body{
     flex: auto;
 }
 .article2{
-    height: 680px;
-    width: 100%;
+    height: 80vh;
+    width: 70vw;
     position: absolute;
-    top: 1100px;
+    top: 75vw;
     background-color: #f5f1ee;
-    padding-left: 40px ;
+    left: 2vw;
 }
 .article2>h1{
     font-size: 36px;
@@ -162,6 +162,7 @@ body{
     top: 1750px;
     background-color: #f5f1ee;
     padding-left: 40px ;
+    left: 2vw;
 }
 .article3>h1{
     font-size: 36px;
@@ -178,7 +179,7 @@ body{
     position: absolute;
     top: 2300px;
     background-color: #f5f1ee;
-    padding-left: 40px ;
+    left: 2vw;
 }
 .article4>h1{
     font-size: 36px;
@@ -195,7 +196,7 @@ body{
     position: absolute;
     top: 2860px;
     background-color: #f5f1ee;
-    padding-left: 40px ;
+    left: 2vw;
 }
 .article5>h1{
     font-size: 36px;
@@ -212,7 +213,7 @@ body{
     position: absolute;
     top: 3730px;
     background-color: #f5f1ee;
-    padding-left: 40px ;
+    left: 2vw;
 }
 .article6>h1{
     font-size: 36px;
@@ -231,10 +232,9 @@ body{
 }
 .sheet2{
     font-family: jp;
-    font-size: 34px;
+    font-size: 22px;
     position: relative;
-    top: 40px;
-    left: 30vw;
+    left: 20vw;
 }
 table{
     border:2px solid black ;
