--- a/css/money.css
+++ b/css/money.css
@@ -251,8 +251,9 @@ td:hover {
 .top{
     float: left;
     z-index: 7;
+    margin-top: 5px;
     position: fixed;
-    left: 50px;
+    left: 40px;
 }
 .KW3{
     
