--- a/css/mind/mind2.css
+++ b/css/mind/mind2.css
@@ -70,7 +70,7 @@ body{
     background-color: #d8cabc;
     border-radius: 90px;
     position: relative ;
-    top: -20vh;
+    top: -190px;
     left: 149px;
     z-index: 0;
 }
