--- a/css/mind/mind3.css
+++ b/css/mind/mind3.css
@@ -8,7 +8,7 @@
     margin: 0;
     padding: 0;
     -webkit-text-size-adjust: none;
-    border: 1px solid red;*/  
+    /*border: 1px solid red;*/  
 }
 img{
     display: block;
